2003-05-01  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: copy the location before setting the value for the
	control builders.

	* BaseCompiler.cs: changed parameters for CompilationException.

	* CompilationException.cs: it takes now line numbers and error
	descriptions from the CompilerErrorCollection.

	* Location.cs: used when a copy of an ILocation is needed.

	* ParseException.cs: implemented new methods to provide line numbers
	and souce file.

	* TemplateControlCompiler.cs: throw a ParseException where appropiate.

2003-05-01  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: also support data bind syntax inside tags not
	processed as controls. Added debugging method.

	* TemplateControlCompiler.cs: reset the number of data binding handlers 
	in the proper place. Small fix when getting the container type.

2003-04-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateControlCompiler.cs: correctly set the TemplateSourceDirectory 
	value.

2003-04-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: handle code render syntax in tag attributes.

	* AspParser.cs: the constructor now takes a TextReader.

	* TemplateControlCompiler.cs: removed comment.

2003-04-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateControlCompiler.cs: added support for data bound properties.

2003-04-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspComponentFoundry.cs: simplified it a lot by using Type and Assembly
	instead of their names.

	* AspElements.cs: removed. No longer needed.

	* AspGenerator.cs: this file is now in charge of interfacing between
	the parser and the compiler. It manages the creation of the
	ControlBuilder tree and the compilation of the CodeDOM tree.

	* AspParser.cs: tag handling is simpler now.  Instead of a whole bunch
	of different Types, tags are just and id and a set of attributes.
	Implement ILocation interface.
	